添加 icon 和 iconPosition 属性

--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>轱辘</title>
     <style>
-        *{margin:0;padding:0;box-sizing: border-box;}
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
 
-        :root{
-            --button-height:32px;
-            --font-size:14px;
+        :root {
+            --button-height: 32px;
+            --font-size: 14px;
             --button-bg: white;
             --button-active-bg: #eee;
             --border-radius: 4px;
@@ -19,22 +23,35 @@
             --border-color: #999;
             --border-color-hover: #666;
         }
+
         #app {
             margin: 20px;
         }
+
         body {
             font-size: var(--font-size);
         }
     </style>
     <style>
-
+        .icon {
+            height: 1em;
+            width: 1em;
+        }
     </style>
 </head>
 <body>
-    <div id="app">
-        <g-button></g-button>
-    </div>
-    <script src="./src/app.js"></script>
-
+<div id="app">
+    <g-button>
+        我爱
+    </g-button>
+    <g-button icon="setting">
+        我爱
+    </g-button>
+    <g-button icon="setting" icon-position="right">
+        我爱
+    </g-button>
+</div>
+<script src="./src/app.js"></script>
+<script src="//at.alicdn.com/t/font_720640_gaqkkpfkngg.js"></script>
 </body>
 </html>
