--- a/index.html
+++ b/index.html
@@ -33,10 +33,7 @@
         }
     </style>
     <style>
-        .icon {
-            height: 1em;
-            width: 1em;
-        }
+
     </style>
 </head>
 <body>
@@ -50,6 +47,7 @@
     <g-button icon="setting" icon-position="right">
         我爱
     </g-button>
+    <g-icon name="download"></g-icon>
 </div>
 <script src="./src/app.js"></script>
 <script src="//at.alicdn.com/t/font_720640_gaqkkpfkngg.js"></script>
